[package]
name = "quilclient"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Agost Biro <agostbiro@gmail.com>"]
description = "Quilibrium client CLI"
readme = "README.md"
homepage = "https://github.com/agostbiro/quilibrium-rs"
repository = "https://github.com/agostbiro/quilibrium-rs"
keywords = ["cli", "client", "quilibrium"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
hex = "0.4.3"
multiaddr = "0.18.0"
quilibrium = { version = "0.2.0", path = "../quilibrium" }
prost = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["fs", "macros", "rt-multi-thread"] }
tonic = "0.10.2"
